# hpc_b_bjj

./: README.md  cuda_error_check.h
exercise1/: deviceQuery.cu  qsub.sh
exercise2/: qsub.sh  vec_add  vec_add.cu
lecture1/exercise1/: Makefile  deviceQuery  deviceQuery.cu
lecture1/exercise2/: Makefile  vec_add  vec_add.cu
lecture10/ex1/: CMakeLists.txt  README
lecture10/exercise1/: README.md  dot.cpp  qsub.sh
lecture10/exercise2/: CMakeLists.txt  README.md  matvecmul.cpp  qsub.sh
lecture10/exercise3/: CMakeLists.txt  README.md
lecture11/: exercise1.jl  exercise1_and_2.jl  exercise2.jl
lecture2/exercise1/: Makefile  README.md  syncthreads.cu
lecture2/exercise2/: Makefile  README.md  cos  cos.cu  cos.txt
lecture2/exercise3/: Makefile  heat_stencil_cuda.cu  heat_stencil_omp.c  qsub.sh
lecture3/: Makefile  README.md  exercise-efficiency.cu  exercise-efficiency_original.cu  qsub.sh
lecture4/exercise1/: Makefile  README.md  vector.cu
lecture4/exercise2/: Makefile  README.md  syncthreads.cu
lecture4/exercise3/: Makefile  README.md  stencil.cu
lecture5/exercise1/: Makefile  cuBlas_test.cu  matvec.cpp  performance.ipynb  qsub.sh
lecture5/exercise2/: Makefile  cuFFT.cu  cufft.cpp  cufft.cu  qsub.sh
lecture5/exercise3/: Makefile  cusparse.cpp  cusparse.cu  qsub.sh
lecture6/: Makefile  exercise-multiplegpu.cu  qsub.sh
lecture7/: Makefile  README  README.md  mandelbrot  mandelbrot-dyn.cu  mandelbrot.cu  mandelbrot_dyn  mandelbrot_dyn.cu
lecture8/exercise1/: Makefile  README.md  exercise-advanced-einkemmer  exercise-advanced-einkemmer.cu  qsub.sh
lecture8/exercise2/: Makefile  README.md  matmul.cu  qsub.sh
lecture9/exercise1/: CMakeLists.txt  README  README.md  qsub.sh  vecadd.cpp  vecadd_3d.cpp  vecadd_3d_layoutleft.cpp  vecadd_3d_layoutright.cpp
lecture9/exercise2/: README.md  qsub.sh  sparsemv.cpp
